[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_menu"]

[node name="StartMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_menu")

[node name="BGOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.02, 0.08, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.5, 1)
theme_override_font_sizes/font_size = 72
text = "GEOMETRY DASH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelName" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Level 1 - The Beginning"
horizontal_alignment = 1

[node name="AttemptsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "Attempts: 1"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "â–¶ PLAY"

[node name="Instructions" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Click the button to Start"
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
